# flask-course

./: data.db  poetry.toml  pyproject.toml
src/: app.py  app_restful.py  create_tables.py  item.py  security.py  test.py  user.py
src/templates/: index.html
