[tool.poetry]
name = "flask-course4"
version = "0.1.0"
description = ""
authors = ["Shiul93 <lfllamas93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.9"
Flask = "^2.1.2"
Flask-RESTful = "^0.3.9"
Flask-JWT = "^0.3.2"
Werkzeug = "2.0.0"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
